Update package names

--- a/packages/react-api/package.json
+++ b/packages/react-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carto/react-api",
+  "name": "@keys2design/carto-react-api",
   "version": "2.2.13",
   "description": "CARTO for React - Api",
   "author": "CARTO Dev Team",
