--- a/packages/react-auth/package.json
+++ b/packages/react-auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carto/react-auth",
+  "name": "@keys2design/carto-react-auth",
   "version": "2.2.13",
   "description": "CARTO for React - Auth",
   "author": "CARTO Dev Team",
