--- a/packages/react-basemaps/package.json
+++ b/packages/react-basemaps/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carto/react-basemaps",
+  "name": "@keys2design/carto-react-basemaps",
   "version": "2.2.13",
   "description": "CARTO for React - Basemaps",
   "keywords": [
