--- a/packages/react-ui/package.json
+++ b/packages/react-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carto/react-ui",
+  "name": "@keys2design/carto-react-ui",
   "version": "2.2.13",
   "description": "CARTO for React - UI",
   "author": "CARTO Dev Team",
