--- a/packages/react-widgets/package.json
+++ b/packages/react-widgets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carto/react-widgets",
+  "name": "@keys2design/carto-react-widgets",
   "version": "2.2.13",
   "description": "CARTO for React - Widgets",
   "author": "CARTO Dev Team",
