--- a/packages/react-core/package.json
+++ b/packages/react-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carto/react-core",
+  "name": "@keys2design/carto-react-core",
   "version": "2.2.13",
   "description": "CARTO for React - Core",
   "author": "CARTO Dev Team",
