--- a/packages/react-redux/package.json
+++ b/packages/react-redux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carto/react-redux",
+  "name": "@keys2design/carto-react-redux",
   "version": "2.2.13",
   "description": "CARTO for React - Redux",
   "author": "CARTO Dev Team",
