--- a/packages/react-workers/package.json
+++ b/packages/react-workers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carto/react-workers",
+  "name": "@keys2design/carto-react-workers",
   "version": "2.2.13",
   "description": "CARTO for React - Workers",
   "author": "CARTO Dev Team",
