--- a/packages/react-auth/package.json
+++ b/packages/react-auth/package.json
@@ -68,7 +68,7 @@
     "@babel/runtime": "^7.13.9"
   },
   "peerDependencies": {
-    "@carto/react-core": "^2.2.13",
+    "@keys2design/carto-react-core": "^2.2.13",
     "react": "17.x || 18.x",
     "react-dom": "17.x || 18.x"
   }
