--- a/packages/react-ui/package.json
+++ b/packages/react-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@keys2design/carto-react-ui",
-  "version": "2.2.19",
+  "version": "2.2.20",
   "description": "CARTO for React - UI",
   "author": "CARTO Dev Team",
   "keywords": [
@@ -93,5 +93,11 @@
     "react": "17.x || 18.x",
     "react-dom": "17.x || 18.x",
     "styled-components": "^5.2.3"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "testPathIgnorePatterns": [
+      "__tests__/widgets/utils/timeFormat.test.js"
+    ]
   }
 }
