--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2020",
     "module": "es2020",
     "jsx": "react",
-    "strict": true,
+    "strict": false,
     "noImplicitAny": false,
     "allowJs": true,
     "checkJs": true,
